project(ANIMA-REGISTRATION)

################################################################################
# Here go the add_subdirectories, no code should be at the root of the project
################################################################################

add_subdirectory(Algorithms)
add_subdirectory(AnatomicalCommands)
add_subdirectory(Common)
add_subdirectory(DiffusionCommands)
add_subdirectory(Resamplers)
add_subdirectory(SVFOperations)
add_subdirectory(Symmetry)
add_subdirectory(Tools)
add_subdirectory(TransformationAgregators)
