project(ANIMA-REGISTRATION)

################################################################################
# Here go the add_subdirectories, no code should be at the root of the project
################################################################################

add_subdirectory(AnatomicalCommands)
#add_subdirectory(ArithmeticTools)
add_subdirectory(DiffusionCommands)
add_subdirectory(Resamplers)
add_subdirectory(Symmetry)
add_subdirectory(CommonTools)

