project(ANIMA-SEGMENTATION)

################################################################################
# Here go the add_subdirectories, no code should be at the root of the project
################################################################################

add_subdirectory(BasicTools)
add_subdirectory(Commands)
add_subdirectory(GraphCut)
add_subdirectory(Isosurface)
add_subdirectory(LesionSimulation)
add_subdirectory(Staple)
add_subdirectory(TissuesEMClassification)
add_subdirectory(ValidationTools)
