## #############################################################################
## Subdirs exe directories
## #############################################################################

add_subdirectory(fibers_disease_scores)
add_subdirectory(patient_to_group_comparison_on_tracks)
add_subdirectory(tracks_mcm_properties_extraction)
add_subdirectory(add_mcm_to_tracts)
