## #############################################################################
## Subdirs exe directories
## #############################################################################

add_subdirectory(fibers_disease_scores)
add_subdirectory(patient_to_group_comparison_on_tracks)
add_subdirectory(tracks_mcm_properties_extraction)
add_subdirectory(fibers_a_contrario)
add_subdirectory(fiber_property_extract_rescale)